--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 </section>
 <!-- Section-2 -->
-<section>
+<section class="features">
     <div class="container">
     <ul class="features-list list">
         <li>
@@ -61,7 +61,7 @@
     </ul>
     </div>
 </section>
-<section>
+<section class="pjc">
     <div class="container">
     <h2 class="projects">Чем мы занимаемся</h2>
     <ul class="projects-list list">
@@ -93,7 +93,7 @@
     </div>
 </section>
 <!-- Section-3 -->
-<section>
+<section class="we">
     <div class="container">
     <h2 class="team">Наша команда</h2>
     <ul class="team-list list">
