--- a/portfolio.html
+++ b/portfolio.html
@@ -17,18 +17,20 @@
 <body class="body">
     <header class="header">
         <div class="container">
-            <a href="./" class="logo link" lang="en"><span class="logo-first">Web</span>Studio</a>
             <nav class="nav">
-                <ul class="header-list list">
-                    <li> <a href="./" class="header-item link">Студия</a></li>
-                    <li> <a href="./portfolio.html" class="header-item link">Портфолио</a></li>
-                    <li> <a href="" class="header-item link">Контакты</a></li>
+                <a href="./" class="logo link" lang="en"><span class="logo-first">Web</span>Studio</a>
+                <ul class="header-men list">
+                    <li class="header-li"> <a href="./" class="header-item link">Студия</a></li>
+                    <li class="header-li"> <a href="./portfolio.html" class="header-item link">Портфолио</a></li>
+                    <li class="header-li"> <a href="" class="header-item link">Контакты</a></li>
+                </ul>
+                <ul class="header-cont list">
+                    <li class="header-li"><a href="mailto:info@devstudio.com"
+                            class="header-contacts link">info@devstudio.com</a></li>
+                    <li class="header-li"><a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
+                    </li>
                 </ul>
             </nav>
-            <ul class="header-list list">
-                <li><a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a></li>
-            </ul>
         </div>
     </header>
 
