--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
         </ul>
 
         <ul class="products-list list">
-            <li>
+            <li class="products-li">
                 <img
                 src="./images/projekt1.jpg"
                 alt="Логотип сайта компании Технокряк"
@@ -56,56 +56,56 @@
                 height="294" />
                    <h3 class="products-name">Технокряк</h3><p><span class="products-text">Веб-сайт</span></p>
             </li>
-            <li>
+            <li class="products-li">
                 <img src="./images/projekt2.jpg" 
                 alt="Постер New Orlean vs Golden Star" 
                 width="370" 
                 height="294" />
                     <h3 class="products-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3><p><span class="products-text">Дизайн</span></p>
             </li>
-            <li>
+            <li class="products-li">
                 <img src="./images/projekt3.jpg" 
                 alt="Логотип ресторана Seafood" 
                 width="370" 
                 height="294" />
                     <h3 class="products-name">Ресторан <span lang="en">Seafood</span></h3><p><span class="products-text">Приложение</span></p>
             </li>
-            <li>
+            <li class="products-li">
                 <img src="./images/projekt4.jpg" 
                 alt="Наушники" 
                 width="370" 
                 height="294" />
                     <h3 class="products-name">Проект <span lang="en">Prime</span></h3><p><span class="products-text">Маркетинг</span></p>
             </li>
-            <li>
+            <li class="products-li">
                 <img src="./images/projekt5.jpg" 
                 alt="Две коробки" 
                 width="370" 
                 height="294" />
                     <h3 class="products-name">Проект <span lang="en">Boxes</span></h3><p><span class="products-text">Приложение</span></p>
             </li>
-            <li>
+            <li class="products-li">
                 <img src="./images/projekt6.jpg" 
                 alt="Монитор" 
                 width="370" 
                 height="294" />
                     <h3 lang="en" class="products-name">Inspiration has no Borders</h3><p><span class="products-text">Веб-сайт</span></p>
             </li>
-            <li>
+            <li class="products-li">
                 <img src="./images/projekt7.jpg" 
                 alt="Разворот книги, текст с изображениями" 
                 width="370" 
                 height="294" />
                     <h3 class="products-name">Издание <span lang="en">Limited Edition</span></h3><p><span class="products-text">Дизайн</span> </p>
             </li>
-            <li>
+            <li class="products-li">
                 <img src="./images/projekt8.jpg" 
                 alt="Бирка на веревке с крупными буквами" 
                 width="370" 
                 height="294" />
                     <h3 class="products-name">Проект <span lang="en">LAB</span></h3><p><span class="products-text">Маркетинг</span></p>
             </li>
-            <li>
+            <li class="products-li">
                 <img src="./images/projekt9.jpg" 
                 alt="Открытый ноутбук" 
                 width="370" 
