--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
 <main>
     <!-- Section-1 -->
-<section class="hero">
+<section class="hero section">
     <div class="container">
     <h1 class="section-hero">Эффективные решения <br> для вашего бизнеса</h1>
     <button type="button" class="btn-hero">Заказать услугу</button>
     </div>
 </section>
 <!-- Section-2 -->
-<section class="features">
+<section class="features section">
     <div class="container">
     <ul class="features-list list">
         <li>
@@ -61,7 +61,7 @@
     </ul>
     </div>
 </section>
-<section class="pjc">
+<section class="pjc section">
     <div class="container">
     <h2 class="projects">Чем мы занимаемся</h2>
     <ul class="projects-list list">
@@ -93,7 +93,7 @@
     </div>
 </section>
 <!-- Section-3 -->
-<section class="we">
+<section class="we section">
     <div class="container">
     <h2 class="team">Наша команда</h2>
     <ul class="team-list list">
