--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 
     <main>
        <!--Section-1-->
-    <section class="products">
+    <section class="products section">
         <div class="container">
     <h1 class="visually-hidden">Реализованные проекты</h1>
         <ul class="filters-list list">
