--- a/index.html
+++ b/index.html
@@ -99,23 +99,31 @@
     <ul class="team-list list">
         <li>
             <img src="./images/photo-1.jpg" alt="Фото Игорь Демьяненко" width="270" height="260" />
-            <h3 class="manager">Игорь Демьяненко</h3>
-            <p lang="en" class="manager-position">Product Designer</p>
+            <div class="team-manager">
+                <h3 class="manager">Игорь Демьяненко</h3>
+                <p lang="en" class="manager-position">Product Designer</p>
+            </div>
         </li>
         <li>
             <img src="./images/photo-2.jpg" alt="Фото Ольга Репина" width="270" height="260" />
-            <h3 class="manager">Ольга Репина</h3>
-            <p lang="en" class="manager-position">Frontend Developer</p>
+            <div class="team-manager">
+                <h3 class="manager">Ольга Репина</h3>
+                <p lang="en" class="manager-position">Frontend Developer</p>
+            </div>
         </li>
         <li>
             <img src="./images/photo-3.jpg" alt="Фото Николай Тарасов" width="270" height="260" />
-            <h3 class="manager">Николай Тарасов</h3>
-            <p lang="en" class="manager-position">Marketing</p>
+            <div class="team-manager">
+                <h3 class="manager">Николай Тарасов</h3>
+                <p lang="en" class="manager-position">Marketing</p>
+            </div>
         </li>
         <li>
             <img src="./images/photo-4.jpg" alt="Фото Михаил Ермаков" width="270" height="260" />
-            <h3 class="manager">Михаил Ермаков</h3>
-            <p lang="en" class="manager-position">UI Designer</p>
+            <div class="team-manager">
+                <h3 class="manager">Михаил Ермаков</h3>
+                <p lang="en" class="manager-position">UI Designer</p>
+            </div>
         </li>
     </ul>
     </div>
@@ -124,10 +132,14 @@
 <footer class="footer-body">
     <div class="container">
     <a href="./" class="logo-footer link" lang="en"><span class="logo-first-footer">Web</span><span class="logo-second-footer">Studio</span></a>
-            <address> <span class="address">г. Киев, пр-т Леси Украинки, 26</span> <br>
-            <a href="mailto:info@devstudio.com" class="contacts link">info@devstudio.com</a><br>
-            <a href="tel:+380961111111" class="contacts link">+38 096 111 11 11</a>
+            <div class="footer-men">
+            <ul class="list">
+            <li class="footer-li"><address> <span class="address">г. Киев, пр-т Леси Украинки, 26</span> <br></li>
+            <li class="footer-li"><a href="mailto:info@devstudio.com" class="contacts link">info@devstudio.com</a><br></li>
+            <li class="footer-li"><a href="tel:+380961111111" class="contacts link">+38 096 111 11 11</a></li>
             </address>
+            </ul>
+            </div>
     </div>
 </footer>
 </body>
